+ add "Timer over Spider's Den bones" feature
= fix "Chicken Head Timer"