@@ -1,2 +1,3 @@
 + add "Timer over Spider's Den bones" feature
 = fix "Chicken Head Timer"
+= fix Bingo Party incoming message formatter
